Refactor: Move `AgentType` to `api.domain` and update imports across modules
- Relocated `AgentType` from `analyst.domain` to `api.domain` for consistent API usage.
- Updated all impacted imports in services, DTOs, and configuration files.
- Removed redundant inline Markdown styles in `AnalysisView` and linked new CSS stylesheet.
- Added support for agent-specific tabs in `AnalysisView` with dynamic JSON processing logic.